# dbx-python-cli

./: README.md  package-lock.json  package.json  presentation.html  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/api/: commands.rst  index.rst  utils.rst
docs/design/: index.rst  standalone-installation.rst  venv-strategy.rst  wagtail-support.rst
docs/features/: documentation.rst  global-options.rst  index.rst  just-commands.rst  mongodb-runner.rst  project-management.rst  repo-management.rst  spec-sync.rst
docs/introduction/: overview.rst  quick-start.rst
src/dbx_python_cli/: cli.py  config.toml
src/dbx_python_cli/commands/: branch.py  clone.py  config.py  docs.py  edit.py  env.py  install.py  just.py  log.py  mongodb.py  open.py  project.py  project_utils.py  remove.py  repo_utils.py  spec.py  status.py  switch.py  sync.py  test.py
src/dbx_python_cli/templates/project_template/: justfile
src/dbx_python_cli/templates/project_template/project_name/: apps.py  routers.py  urls.py  views.py  wagtail_hooks.py
src/dbx_python_cli/templates/project_template/scripts/: wagtail_setup.py
src/dbx_python_cli/utils/: output.py  project.py  repo.py  venv.py
tests/: test_branch_command.py  test_clone_command.py  test_env_command.py  test_just_command.py  test_log_command.py  test_project_command.py  test_repo.py  test_repo_utils.py  test_spec_command.py  test_status_command.py  test_test_command.py
tests/integration/: test_project_integration.py  test_repo_integration.py
(+22 files in other folders)
