# Build system configuration (PEP 517/518)
# Explicitly specifying the build backend is best practice for reproducible builds.
# Without this section, build tools fall back to legacy setuptools behavior.
#
# setuptools.build_meta vs setuptools.build_meta:__legacy__:
# - build_meta: Modern PEP 517 backend, uses pyproject.toml for all configuration
# - build_meta:__legacy__: Fallback mode that also reads setup.py/setup.cfg
# We use the modern backend since all our config is in pyproject.toml.
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dbx-python-cli"
version = "0.1.0"
description = "A command line tool for DBX Python development tasks. AI first. De-siloing happens here."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django",  # Required for dbx project add (django-admin startproject)
    "tomli-w>=1.2.0",
    "typer",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "furo",
]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "dbx-python-cli[docs,test]",
]

[project.scripts]
dbx = "dbx_python_cli.cli:app"

[tool.setuptools.package-data]
dbx_python_cli = [
    "config.toml",
    "templates/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=dbx_python_cli",
    "--cov-report=term-missing",
    "--cov-report=html",
]
